# moodie-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  redis_helper.rs  server_functions.rs  tmdb.rs  tmdb_helper.rs
src/components/: pages.rs
style/: main.scss
